fastapi/fastapi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fastapi-pod
  labels:
    app: fastapi
spec:
  containers:
    - name: fastapi
      image: omar40276/fastapi-app:latest
      ports:
        - containerPort: 8000
