fastapi/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  type: ClusterIP  # 此服務只在集群內部可訪問
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
