fastapi/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
spec:
  defaultBackend:
    service:
      name: fastapi-service
      port:
        number: 8001
#  rules:
#  - host: fastapi.local
#    http:
#      paths:
#        - path: /
#          pathType: Prefix
#          backend:
#            service:
#              name: fastapi-service
#              port:
#                number: 8001
